k8s/admin-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  labels:
    app: admin-service
spec:
  selector:
    app: admin-service
  ports:
  - protocol: TCP
    port: 3006
    targetPort: 3006
  type: ClusterIP
