k8s/delivery-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  labels:
    app: delivery-service
spec:
  selector:
    app: delivery-service
  ports:
  - protocol: TCP
    port: 3004
    targetPort: 3004
  type: ClusterIP
