k8s/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  selector:
    app: notification-service
  ports:
  - protocol: TCP
    port: 3007
    targetPort: 3007
  type: ClusterIP
