k8s/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment-service
spec:
  selector:
    app: payment-service
  ports:
  - protocol: TCP
    port: 3005
    targetPort: 3005
  type: ClusterIP
